// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@RabbitConsumer() decorator 1`] = `
[
  DecoratorFactory {},
  DecoratorFactory {
    "autobind": true,
    "id": [Function],
    "type": "RabbitControllerType",
  },
]
`;

exports[`@RabbitConsumer() decorator 2`] = `
{
  "consumer": [
    PropDecoratorFactory {
      "queue": "consumerTest",
      "type": "Consumer",
    },
  ],
}
`;

exports[`@RabbitController() decorator 1`] = `
[
  DecoratorFactory {},
  DecoratorFactory {
    "autobind": true,
    "id": [Function],
    "type": "RabbitControllerType",
  },
]
`;

exports[`@RabbitListener() & @RabbitConsumer() decorator 1`] = `
[
  DecoratorFactory {},
  DecoratorFactory {
    "autobind": true,
    "id": [Function],
    "type": "RabbitControllerType",
  },
]
`;

exports[`@RabbitListener() & @RabbitConsumer() decorator 2`] = `
{
  "consumer": [
    PropDecoratorFactory {
      "queue": "consumerTest",
      "type": "Consumer",
    },
  ],
  "listener": [
    PropDecoratorFactory {
      "queue": "listenerTest",
      "type": "Listener",
    },
  ],
}
`;

exports[`@RabbitListener() decorator 1`] = `
[
  DecoratorFactory {},
  DecoratorFactory {
    "autobind": true,
    "id": [Function],
    "type": "RabbitControllerType",
  },
]
`;

exports[`@RabbitListener() decorator 2`] = `
{
  "listener": [
    PropDecoratorFactory {
      "queue": "listenerTest",
      "type": "Listener",
    },
  ],
}
`;
